--- a/submissions/thesis-original/appendices/evaluation/clf_reports.tex
+++ b/submissions/thesis-original/appendices/evaluation/clf_reports.tex
@@ -1,33 +1,31 @@
 \chapter{Classification Reports}
 \label{appendix:classification_reports}
 
-Figure~\ref{fig:evaluation:clf_report_slice} shows the classification report for each model. The F1-Scores (Positive Class) are identical across the models, at 0.32.
-
 \begin{table}[!htb]
     \centering
     \scalebox{0.9}{\input{../tables/evaluation/clf_report_slice}}
-    \caption[Classification report by slice date]{} %Needs caption
+    \caption[Classification report by slice date]{Classification report by slice date.}
     \label{fig:evaluation:clf_report_slice}
 \end{table}
 
 \begin{table}[!htb]
     \centering
     \scalebox{0.9}{\input{../tables/evaluation/clf_report_window}}
-    \caption[Classification report by forecast window]{}
+    \caption[Classification report by forecast window]{Classification report by forecast window.}
     \label{fig:evaluation:clf_report_window}
 \end{table}
 
 \begin{table}[!htb]
     \centering
     \scalebox{0.9}{\input{../tables/evaluation/clf_report_stage}}
-    \caption[Classification report by developmental stage]{}
+    \caption[Classification report by developmental stage]{Classification report by developmental stage.}
     \label{fig:evaluation:clf_report_stage}
 \end{table}
 
 \begin{table}[!htb]
     \centering
     \scalebox{0.9}{\input{../tables/evaluation/clf_report_outcome}}
-    \caption[Classification report by target outcome]{}
+    \caption[Classification report by target outcome]{Classification report by target outcome.}
     \label{fig:evaluation:clf_report_outcome}
 \end{table}
 
