--- a/submissions/thesis-original/conclusions/conclusions.tex
+++ b/submissions/thesis-original/conclusions/conclusions.tex
@@ -4,7 +4,7 @@
  \chapter{Conclusions}
  \label{chap:conclusions}
 
-Our project's aim was to produce a \gls{vc} investment screening system that is efficient, robust and powerful. Our system uses online data sources and machine learning to identify startups that are likely to receive additional funding or exit in a given forecast window. While this is a challenging problem even for experienced \gls{vc} investors, we achieved classification results that have practical application for \gls{vc} firms.
+Our project's aim was to produce a \gls{vc} investment screening system that is efficient, robust and powerful. Our system uses online data sources and machine learning to identify startups that are likely to receive additional funding or exit in a given forecast window. While this is a challenging problem even for experienced \gls{vc} investors, our system achieved results that have practical application for \gls{vc} firms.
 
 \section{Evaluation of Criteria}
 
@@ -14,22 +14,27 @@ Our system intends to replace manual investment screening (referral, Google sear
 
 \subsection{Robustness}
 
-Our system must be robust robust in its performance with respect to time so investors can rely on its predictions. The \gls{vc} industry is concerned that predictive models trained on historical data will not accurately predict future trends and activity. This has been identified as a key barrier to the adoption of automated systems by the \gls{vc} industry \cite{stone2014}. We evaluated our system across a number of historical datasets, forecast windows, and even multiple evaluation metrics. We found variance across all evaluation metrics to be very low, with slightly more variance over shorter forecast windows. When we explored the feature weights for each model developed on different historical datasets, we found only slight variance. This suggests that our system produces highly robust models, suitable for forward-looking investment screening.
+Our system must be robust in its performance with respect to time so investors can rely on its predictions. The \gls{vc} industry is concerned that predictive models trained on historical data will not accurately predict future trends and activity. This has been identified as a key barrier to the adoption of automated systems by the \gls{vc} industry \cite{stone2014}. We evaluated our system across a number of historical datasets, forecast windows, and even multiple evaluation metrics. We found variance across all evaluation metrics to be very low, with slightly more variance over shorter forecast windows. When we explored the feature weights for each model developed on different historical datasets, we found only slight variance. This suggests that our system produces highly robust models, suitable for forward-looking investment screening.
 
 \subsection{Predictive Power}
 
-Our system must be accurate at identifying a variety of high-potential investment candidates. We evaluated the systems' predictive power based on its ability to predict over different forecast windows (e.g. 2-4 years), for target companies at different developmental stages (e.g. Seed, Series A etc.), and for different target outcomes (e.g. predicting additional funding rounds). Forecast window has an impact on our system's performance. Our system produced F1 Scores of 0.36, 0.48 and 0.55 for forecast windows of 2, 3 and 4 years. In the future, it would be interesting to also explore forecast windows that are closer in duration to a typical \gls{vc} investment horizon (5-8 years). Our system's performance has a positive relationship with developmental stage, producing F1 Scores ranging from 0.33 for Pre-Seed companies through to 0.62 for Series C companies. When we fit models separately to each stage, we see a performance improvement (+0.03), and particularly for Series D+ companies (0.53 to 0.66). Finally, our system varies in its performance at predicting target outcomes, producing F1 Scores ranging from 0.51 for predicting additional funding through to 0.24 for predicting an IPO.
+Our system must be consistently accurate at identifying a variety of high-potential investment candidates. Unlike previous studies, we evaluated the systems' predictive power across a large problem domain, including predicting over different forecast windows (e.g. 2-4 years), for target companies at different developmental stages (e.g. Seed, Series A etc.), and for different target outcomes (e.g. predicting additional funding rounds). Forecast window has an impact on our system's performance. Our system produced F1 Scores of 0.36, 0.48 and 0.55 for forecast windows of 2, 3 and 4 years. Our system's performance has a positive relationship with developmental stage, producing F1 Scores ranging from 0.33 for Pre-Seed companies through to 0.62 for Series C companies. Finally, our system varies in its performance at predicting target outcomes, producing F1 Scores ranging from 0.51 for predicting additional funding through to 0.24 for predicting an \gls{ipo}. Where comparable, our system produced better or similar results to previous studied systems.
 
-\section{Future Research} %TODO
+\section{Future Work}
 
-\subsection{Network Analysis} %TODO
-\subsection{Temporal Analysis} %TODO
-\subsection{Semantic Text Analysis} %TODO
-\subsection{Systems Integration} %TODO
+\subsection{Automation \& User Interface}
+
+Our current implementation of the system is near-autonomous, but still requires manual scheduling. Future work could prepare this system for use in industry by developing a set-and-forget task scheduling system that optimises when different components of the system are run to ensure that the performance of the system is always near-optimal. This task scheduling system would pair well with an improved CrunchBase data collection system that connects directly to the REST API rather than downloading CSV-dumps. The REST API collector could indicate how many changes have been made in the dataset since the last data collection, and feed that information to the task scheduler. This would allow the task scheduler to run an optimisation process that maximises performance improvement against number of dataset changes and time taken. In addition to task scheduling and API-based data collection, our system requires a basic user interface before it can be commercialised, allowing users to search through the database, filter based on the results of the models, and change configuration of the system.
+
+\subsection{Feature Set Improvement}
+
+While this project was likely the most comprehensive study of startup investment performance in the literature with respect to diversity of features analysed, there are improvements to our feature set to be made in future work. In our implementation of the system, we were unable to source data to represent all the factors of our conceptual framework. Missing factors included: media coverage, social media influence, strategic alliances and financial performance. These features have all previously been indicated to be associated with startup investment performance. In addition, the nature of our feature set was largely homogeneous -- mostly basic features (e.g. number of funding rounds). We expect that future work that extends our feature set by including semantic text features (e.g. keyword analysis from patents, sentiment analysis from media coverage) and social network features (e.g. co-investment networks, spheres of influence) could lead to better startup investment prediction. Finally, it would be interesting to look further at the temporal relationships between different startup activities (e.g. media coverage, funding rounds, \gls{ipo}s etc.) and how this chain of activity might predict investment success (e.g. Markov networks).
 
 \section{Summary}
 
-We produced a \gls{vc} investment screening system that is efficient, robust and predictive. Existing approaches in the literature to predict startup performance have three common limitations: small sample size, a focus on very early-stage investment, and incomplete use of features. In addition, there is little evidence that previous research has translated into systems that assist investors directly. This project addressed these issues and lays the groundwork for an industry-ready \gls{vc} investment screening tool.
+In this project we set out to create a \gls{vc} investment screening system that met our criteria of efficiency, robustness, and predictive power, and we have indeed created such a system. The work required to achieve this project's goals was extensive, from reviewing the state of startup and venture capital theory and applied machine learning in this field, to developing data collection and manipulation systems for our data sources, to developing a classification pipeline optimisation process, and performing experiments that validate the ability of the system to meet our aforementioned criteria.
+
+This project makes three primary contributions with implications for industry and research. First, our system is near-ready for direct application to the \gls{vc} industry: it is near-autonomous, robust to changes in dataset and prediction task, and uses diverse features collected from large public online databases. Second, our system's performance is not only better or comparable to previous studies, it also addresses a far larger domain of investment prediction tasks (with respect to forecast window, developmental stage and target outcome). Third, this project contributes an empirical study of models of startup investment performance more comprehensive than any found in the literature. In conclusion, this project makes significant steps towards automation of the \gls{vc} industry.
 
  \ifcsdef{mainfile}{}{\printbibliography}
 \end{document}
