--- a/submissions/thesis-original/figures/litreview/framework_details.tex
+++ b/submissions/thesis-original/figures/litreview/framework_details.tex
@@ -15,12 +15,13 @@
 [Startup\\Investment,
     [Startup\\Potential,
         [Human\\Capital,
-            [Founders' Capabilities]
-            [NED Capabilities]
-            [Staff Capabilities]
+            [Founder Capabilities]
+            [Advisor Capabilities]
+            [Executive Capabilities]
         ]
         [Social\\Capital,
-            [Social Influence]
+            [Social Media]
+            [Events Influence]
             [Strategic Alliances]
         ]
         [Structural\\Capital,
@@ -32,14 +33,13 @@
             [Investment Record]
             [Investor Reputation]
             [Media Coverage]
-            [Awards and Grants]
         ]
         [Historical\\Performance,
             [Financial Performance]
             [Non-Financial Performance]
         ]
         [Contextual\\Cues,
-            [Competitor Performance]
+            [Industry Performance]
             [Local Economy]
             [Broader Economy]
         ]
