--- a/submissions/thesis-original/introduction/introduction.tex
+++ b/submissions/thesis-original/introduction/introduction.tex
@@ -4,33 +4,35 @@
 \chapter{Introduction}
 \label{chap:introduction}
 
-\Gls{vc} is financial capital provided to early-stage, high-potential, high-growth startup companies. \Gls{vc} firms are behind many successful high-tech companies, such as Google, Apple, Microsoft and Alibaba. \Gls{vc} firms fund startup companies with cash in exchange for an equity stake but unlike investors in the public markets, \gls{vc} firms often take a more active role in managing their investments, providing expertise and advice in both managerial and technical areas. \Gls{vc} firms have two primary roles: as scouts, able to signal the potential of new startups, and as coaches, able to help startups realise that potential \cite{baum2004}. In this way, the experience, skills and networks of the \gls{vc} firms who invest in a startup directly influence the startup’s trajectory. The widespread adoption of the Internet and inexpensive, ubiquitous computing has decreased the cost of starting a business and transformed the venture funding landscape -- companies require less funding to launch but require more to scale in highly competitive markets \cite{graham2013}. There is now an impetus for \gls{vc} firms to change the way they do business.
+\Gls{vc} is financial capital provided to early-stage, high-potential, high-growth startup companies. \Gls{vc} firms are behind many successful high-tech companies, such as Google, Apple, Microsoft and Alibaba. \Gls{vc} firms fund startup companies with cash in exchange for an equity stake but unlike investors in the public markets, \gls{vc} firms often take a more active role in managing their investments, providing expertise and advice in both managerial and technical areas. \Gls{vc} firms have two primary roles: as scouts, able to signal the potential of new startups, and as coaches, able to help startups realise that potential \cite{baum2004}. In this way, the experience, skills and networks of the \gls{vc} firms who invest in a startup directly influence the startup's trajectory. The widespread adoption of the Internet and inexpensive, ubiquitous computing has decreased the cost of starting a business and transformed the venture funding landscape -- companies require less funding to launch but require more to scale in highly competitive markets \cite{graham2013}. There is now an impetus for \gls{vc} firms to change the way they do business.
 
-\Gls{vc} firms face the challenge of choosing a few outstanding investments from a sea of hundreds of thousands of potential opportunities. \Gls{vc} firms seek investments in companies that can provide a liquidity event that returns many times their investment value within the time frame of their fund. For startups, a liquidity event (also commonly referred to as an `exit’) is typically either an \gls{ipo} or an acquisition by a larger competitor. Most \gls{vc} firms expect their investments to reach a liquidity event within 3--8 years, in accordance with their fund timeframe \cite{CITE}. When compared to traditional investors, this would be considered a long-term investment strategy. However, when compared to the trajectory of most companies, this period is particularly short -- not many companies, even successful companies, are capable of maturing at this rate. This makes the \gls{vc} investment screening process particularly difficult. In addition, there are many potential investment candidates, most of which ultimately fail, and traditional metrics of performance (e.g. cashflow, earnings) often do not exist or are uncertain \cite{shane2002}. Traditionally, investment opportunities are either referred or identified through technology scans (e.g. Google searches, patent searches). These manual search processes are time-consuming for \gls{vc} firms.
+\Gls{vc} firms face the challenge of choosing a few outstanding investments from a sea of hundreds of thousands of potential opportunities. \Gls{vc} firms seek investments in companies that can provide a liquidity event that returns many times their investment value within the time frame of their fund. For startups, a liquidity event (also commonly referred to as an `exit') is typically either an \gls{ipo} or an acquisition by a larger competitor. Most \gls{vc} firms expect their investments to reach a liquidity event within 3-6 years, in accordance with their fund time-frame \cite{gompers1995}. When compared to traditional investors, this would be considered a long-term investment strategy. However, when compared to the trajectory of most companies, this period is particularly short -- not many companies, even successful companies, are capable of maturing at this rate. This makes the \gls{vc} investment screening process particularly difficult. In addition, there are many potential investment candidates, most of which ultimately fail, and traditional metrics of performance (e.g. cash-flow, earnings) often do not exist or are uncertain \cite{shane2002}. Traditionally, investment opportunities are either referred or identified through technology scans (e.g. Google searches, patent searches). These manual search processes are time-consuming for \gls{vc} firms.
 
-The \gls{vc} industry requires better systems and processes to efficiently manage labour-intensive tasks like investment origination and screening. Existing approaches in the literature to predict startup performance have three common limitations: small sample size \cite{ahlers2015, gimmon2010, dixon2014, hoenen2014, yu2015, an2015, werth2013, croce2016}, a focus on early-stage investment \cite{beckwith2016, ahlers2015, cheng2016, yuan2016, croce2016, stone2014}, and sparse use of features \cite{ahlers2015, an2015, cheng2016, croce2016, werth2013, gimmon2010}. Although individual studies address some of these limitations, none attempt to synthesise their findings into a standalone study and software design. In addition, there is little evidence that previous research has been translated into systems that are able to assist investors directly. The popularity of online databases like AngelList and CrunchBase, which offer information on startups, investments and investors, is evidence of the \gls{vc} industry’s desire for better, more quantitative methods of assessing startup potential. By 2014, over 1,200 investment organisations (including 624 \gls{vc} firms) were members of CrunchBase's Venture Program, mining CrunchBase's startup data to help inform their investment decisions \cite{patil2015}. There is preliminary evidence that mining these data sources may address previous limitations and make investment origination and screening more efficient and effective \cite{stone2014,bhat2011}.
+The \gls{vc} industry requires better systems and processes to efficiently manage labour-intensive tasks like investment origination and screening. Existing approaches in the literature to predict startup performance have three common limitations: small sample size \cite{ahlers2015, gimmon2010, dixon2014, hoenen2014, yu2015, an2015, werth2013, croce2016}, a focus on early-stage investment \cite{beckwith2016, ahlers2015, cheng2016, yuan2016, croce2016, stone2014}, and a limited feature set \cite{ahlers2015, an2015, cheng2016, croce2016, werth2013, gimmon2010}. Although individual studies address some of these limitations, none attempt to synthesise their findings into a standalone study and software design. In addition, there is little evidence that previous research has been translated into systems that are able to assist investors directly. The popularity of online databases like AngelList and CrunchBase, which offer information on startups, investments and investors, is evidence of the \gls{vc} industry's desire for better, more quantitative methods of assessing startup potential. By 2014, over 1,200 investment organisations (including 624 \gls{vc} firms) were members of CrunchBase's Venture Program, mining CrunchBase's startup data to help inform their investment decisions \cite{patil2015}. There is preliminary evidence that mining these data sources may address previous limitations and make investment origination and screening more efficient and effective \cite{stone2014,bhat2011}.
 
 We believe it is now possible to address previous limitations in this domain and produce a \gls{vc} investment screening system that is efficient, robust and powerful. Our system is based around identifying startup companies that are likely to receive additional funding or have a liquidity event (exit) in a given forecast window. This system can generate statistics and make recommendations that may assist \gls{vc} firms to efficiently and effectively screen investment candidates. To be useful in this context, the implementation of the system must meet the following criteria:
 
 \begin{enumerate}
 
-\item Efficiency. Our system must be more efficient than traditional, manual investment screening. A technique to achieve this is autonomously collecting data from readily-available, online data sources. In this project, we focus primarily on the CrunchBase online database. We test whether this source provides enough observations to provide meaningful statistics.We also test whether we can produce a comprehensive and generalisable feature set, one which would allow investors to complement or replace their data sources over time.
+\item Efficiency. Our system must be more efficient than traditional, manual investment screening. We address this by leveraging autonomous data collection from readily-available, online data sources. In this project, we focus primarily on the CrunchBase online database. We test whether this source provides enough observations to provide meaningful statistics. We also evaluate our system to ensure that it runs in reasonable time for practical use by the \gls{vc} industry.
 
-\item Robustness. Our system must be robust enough to be reliable over time and agnostic to specific data sources. The system must provide a generalised, robust solution for investors that does not require significant technical knowledge to use, is not specific to a time-period, and is not reliant on a single data source. The parameters and features that the system selects should be invariant to time so investors can have reasonable confidence in its predictions.
+\item Robustness. Our system must be robust enough with respect to timeframe that investors trust that predictions it makes based on historical data will be valid in the future. The system must provide a generalised, robust solution for investors that does not require significant technical knowledge to use, is not specific to a time-period, and is not reliant on a single data source. The parameters and features that the system selects should be invariant to time so investors can have reasonable confidence in its predictions.
 
-\item Predictive Power. Our system must be consistently accurate at identifying a variety of high-potential investment candidates. The system provides a broad first screening process for investors so it is important that it is highly sensitive (i.e. it excludes very few positive results). The system should be robust to different forecast windows (i.e. exit in three years from now) as \gls{vc} firms make investment decisions with different periods so they can strategically manage the investment horizons of their funds. Similarly, the system should accurately assess companies at any developmental stage.
+\item Predictive Power. Our system must be consistently accurate at identifying a variety of high-potential investment candidates. The system provides a broad first screening process for investors so it is important that it is highly sensitive to companies that are successful. The system should be robust to different forecast windows (i.e. exit in three years from now) as \gls{vc} firms make investment decisions with different periods so they can strategically manage the investment horizons of their funds. Similarly, the system should accurately assess companies at any developmental stage. Finally, the system should be able to assess the probability of a startup reaching multiple outcomes including acquisition, IPO and additional funding rounds.
 
 \end{enumerate}
 
-The following work is presented in three chapters:
+The thesis is organised as follows:
 
 \begin{enumerate}
 
 \item Literature Review. We review the theoretical background of startup performance and \gls{vc} investment and evaluate previous attempts at using data mining in this domain. We determine that the \gls{vc} industry requires better systems to efficiently manage labour-intensive tasks like investment screening. Existing approaches in the literature to tackle similar business problems have three common limitations: small sample size, a focus on early-stage investment, and incomplete use of features. Preliminary evidence suggests that online data sources and machine learning techniques may allow us to address previous limitations and produce an investment screening system that is efficient, robust and powerful.
 
-\item Design. We outline the design of our system architecture. Our system uses data from the CrunchBase online database with some supplementation from PatentsView (US Patents Office). We use two datasets collected in September 2016 and April 2017 for training and testing respectively. We develop a classification pipeline using the popular Python-based machine learning library Scikit-learn \cite{pedregosa2011}. Our pipeline includes imputation,  feature transformation and scaling, extraction and classification. We optimised these steps using cross-validated randomized hyperparameter search.
+\item Design. We outline the design of our system architecture. Our system uses data from the CrunchBase online database with some supplementation from PatentsView (US Patents Office). We use two datasets collected in September 2016 and April 2017 for training and testing respectively. We develop a classification pipeline using the popular Python-based machine learning library Scikit-learn \cite{pedregosa2011}. Our pipeline includes imputation,  feature transformation and scaling, extraction and classification. We optimised these steps using cross-validated randomized hyper-parameter search.
 
-\item Evaluation. We evaluate our proposed system against three criteria: efficiency, robustness and predictive power. Firstly, we evaluate efficiency by exploring the learning curves of our classification techniques and whether there is sufficient data to produce reliable statistics. Secondly, we evaluate robustness by evaluating our models against multiple reverse-engineered historical datasets and measuring their variance. Thirdly, we evaluate predictive power by testing different forecast windows outcomes. Finally, we discuss our findings more broadly and their implications for investors and future research into startup investment and performance.
+\item Evaluation. We evaluate our proposed system against three criteria: efficiency, robustness and predictive power. Firstly, we evaluate efficiency by exploring the learning curves of our classification techniques and whether there is sufficient data to produce reliable statistics. Secondly, we evaluate robustness by evaluating our models against multiple reverse-engineered historical datasets and measuring their variance. Thirdly, we evaluate predictive power by testing different forecast windows outcomes.
+
+\item Discussion. We discuss the merits and limitations of our project more broadly and their implications for investors and future research into startup investment and performance. Firstly, we discuss the system's design with respect to data sources and collection methods, our novel pipeline optimisation process, and the autonomy and efficiency of the system. Next, we discuss the performance of the system across a variety of domains including training date, forecast window, developmental stage, and target outcome. Finally, we discuss the contribution that our project makes to theory on startup investment performance and future work in this area.
 
 \end{enumerate}
 
