--- a/submissions/thesis-original/references/primary.bib
+++ b/submissions/thesis-original/references/primary.bib
@@ -1,3 +1,21 @@
+@article{gompers1995,
+  title={Optimal investment, monitoring, and the staging of venture capital},
+  author={Gompers, Paul A},
+  journal={The journal of finance},
+  volume={50},
+  number={5},
+  pages={1461--1489},
+  year={1995},
+  publisher={Wiley Online Library}
+}
+
+@book{jolliffe2002,
+  title={Principal component analysis},
+  author={Jolliffe, Ian},
+  year={2002},
+  publisher={Wiley Online Library}
+}
+
 @inproceedings{davis2006,
   title={The relationship between Precision-Recall and ROC curves},
   author={Davis, Jesse and Goadrich, Mark},
