--- a/submissions/thesis-original/tables/litreview/feature_summary.tex
+++ b/submissions/thesis-original/tables/litreview/feature_summary.tex
@@ -10,13 +10,13 @@
 \midrule
 \factor{Startup Potential} \\
       \group{Human Capital} \\
-            Founders' Capabilities
+            Founder Capabilities
                   & \cite{beckwith2016,an2015,gimmon2010}
                   & \cite{shan2014,conti2013} \\
-            NED Capabilities
+            Advisor Capabilities
                   & \cite{baum2004}
                   & \cite{ahlers2015,an2015} \\
-            Staff Capabilities
+            Executive Capabilities
                   & \cite{beckwith2016,an2015,conti2013}
                   & \cite{ahlers2015} \\
       \group{Social Capital} \\
@@ -41,9 +41,6 @@
             Media Coverage
                   & \cite{beckwith2016}
                   & \cite{an2015} \\
-            Awards and Grants
-                  & \cite{ahlers2015}
-                  & - \\
       \group{Historical Performance} \\
             Financial Performance
                   & \cite{beckwith2016,baum2004}
@@ -52,7 +49,7 @@
                   & \cite{an2015,gimmon2010}
                   & \cite{hoenen2014} \\
       \group{Contextual Cues} \\
-            Competitor Performance
+            Industry Performance
                   & \cite{shan2014,croce2016,gimmon2010}
                   & \cite{beckwith2016,conti2013} \\
             Broader Economy
