--- a/submissions/thesis-original/appendices/litreview/feature_selection.tex
+++ b/submissions/thesis-original/appendices/litreview/feature_selection.tex
@@ -18,17 +18,17 @@ Human capital is critical to early-stage startups that have limited resources an
 
 \begin{description}
 
-\item[Founders' Capabilities]
+\item[Founder Capabilities]
 
 Founders play multiple roles in early-stage startups, driving many aspects of the business growth and development. Accordingly, the human capital of founders has been shown to affect startup investment success. In particular, education of founders is a key signal. The number of degrees attained by founders is predictive of success \cite{beckwith2016,gimmon2010}, as is whether a founder has obtained an MBA \cite{beckwith2016}. In addition, past entrepreneurial experience seems to be a predictive factor \cite{gimmon2010} though there is some evidence to dispute this \cite{shan2014}. Finally, the number of founders seems to be correlated to startup success \cite{beckwith2016}, though the underlying relationship may be more nuanced, and could be related to the distribution of team skillset.
 
-\item[Non-Executive Directors' Capabilities]
+\item[Advisor Capabilities]
 
 The boards of startups are smaller and have a higher concentration of ownership than those of well-established companies \cite{ingley2007}. Startups lack corporate skills such as finance, human resources, information technology and legal expertise. Especially if founders are relatively inexperienced, they may look to the board to provide these skills. As a result, there is more overlap between governance and operational roles and directors may have greater influence on company performance through greater involvement in decision making \cite{ingley2007}. Startups with more experienced directors are more successful at raising funds \cite{baum2004}.
 
-\item[Staff Capabilities]
+\item[Executive Capabilities]
 
-Founders play a key role in the very early stages of a startup and also in setting the culture for the organisation, but as the organisation grows more importance is given to the influence of employees. Measures like the number of current employees are broad representations of the startup's human capital and are correlated with subsequent startup investment \cite{beckwith2016,an2015,conti2013}. Detailed analyses of staff human capital are not present in the literature but may be possible using data collected from sources like AngelList and LinkedIn.
+Founders play a key role in the very early stages of a startup and also in setting the culture for the organisation, but as the organisation grows more importance is given to the influence of employees. Measures like the number of current employees are broad representations of the startup's human capital and are correlated with subsequent startup investment \cite{beckwith2016,an2015,conti2013}. Detailed analyses of executive human capital are not present in the literature but may be possible using data collected from sources like AngelList and LinkedIn.
 
 \end{description}
 
@@ -38,9 +38,13 @@ Entrepeneurship revolves around opportunity discovery and realisation \cite{shan
 
 \begin{description}
 
-\item[Social Influence]
+\item[Social Media]
 
 Startups use social media to communicate with other parties including their customers, potential customers, the media, potential employees, and potential investors. Social media activity can be proxy for a startup's social influence. Startups use different social media platforms for different purposes. Presence and engagement (e.g. number of followers, number of likes, number of posts) on Facebook and Twitter are predictive of startup investment success \cite{cheng2016,beckwith2016}. These platforms are likely to capture customer or potential customer interactions, which is an indicator of market adoption. In addition, the number of followers on AngelList predicts startup investment success \cite{an2015}, probably because it captures potential employees and investors' interest.
+
+\item[Event Influence]
+
+%TODO
 
 \item[Strategic Alliances]
 
@@ -80,10 +84,6 @@ Funding from reputable investors sends a clear signal to potential investors tha
 
 Media coverage provides legitimacy and credibility to startups. Media attention for startups affects the perceived valuation of well-informed experts like venture capitalists \cite{petkova2013}. This also translates to increased investment success \cite{beckwith2016}. There are a few possible explanations for this. First, media coverage signals public interest which might positively influence other stakeholders like customers, employees, etc. Second, new information become widely available which reduces perceived information assymetry.
 
-\item[Awards and Grants]
-
-Governments and other startup ecosystem supporters often run competitions, grant processes and awards to recognise and celebrate startups. Not only do awards and grants raise the profile of startups but they also indicate third-party validation. Interestingly, there is some evidence that government grants are positively associated with startup investment but awards may have a negative effect \cite{ahlers2015}. Perhaps this suggests that higher quality startups focus on more critical activities (e.g. raising funds, filing for patents).
-
 \end{description}
 
 \subsection{Historical Performance}
@@ -108,7 +108,7 @@ Startups do not exist in isolation but are rather a product of their context. In
 
 \begin{description}
 
-\item[Competitor Performance]
+\item[Industry Performance]
 
 Startups are involved in almost every industry. However, startups across industries have very different requirements, trajectories and measure their performance in different ways. Comparing startups across industries does not necessarily provide a clear view as to whether the potential of a firm is remarkable, likely errant, or within normal ranges. Acccordingly, industry classification has been found to be a key determinant of startup investment \cite{shan2014,croce2016,gimmon2010}.
 
