--- a/submissions/thesis-original/tables/design/descriptives_overall_stage.tex
+++ b/submissions/thesis-original/tables/design/descriptives_overall_stage.tex
@@ -1,14 +1,14 @@
-\begin{tabular}{lrrrrrrrrr}
+\begin{tabular}{lrrrrrrrrrrrr}
 \toprule
-{} &     Obs & Age (Years) &        & Funding Raised (USD, millions) &         & Funding Rounds (N) &        & Available Features (N) &        \\
-{} &       N &         IQR & Median &                            IQR &  Median &                IQR & Median &                    IQR & Median \\
+{} &     Obs & Age (Years) &        & Funding Raised (USD, millions) &         & Funding Rounds (N) &        & Patent Filings (N) &      &      & Available Features (N) &        \\
+{} &       N &         IQR & Median &                            IQR &  Median &                IQR & Median &               50th & 75th & 90th &                    IQR & Median \\
 \midrule
-Pre-Seed  &  113915 &       3.737 &  4.362 &                          0.000 &   0.000 &                  0 &      0 &                    127 &     24 \\
-Seed      &   38942 &       4.003 &  4.663 &                          1.295 &   0.250 &                  1 &      1 &                    127 &    176 \\
-Series A  &    6615 &       5.005 &  5.693 &                          7.906 &   4.400 &                  2 &      2 &                    117 &    237 \\
-Series B  &    3342 &       5.918 &  7.608 &                         22.032 &  14.891 &                  2 &      3 &                     87 &    252 \\
-Series C  &    1610 &       5.523 &  8.696 &                         45.881 &  35.285 &                  2 &      3 &                     80 &    302 \\
-Series D+ &     998 &       5.005 &  9.696 &                         90.300 &  74.385 &                  3 &      5 &                     69 &    315 \\
-Included  &  165422 &       4.003 &  4.688 &                          3.970 &   0.000 &                  1 &      1 &                    145 &     89 \\
+Pre-Seed  &  113915 &       3.737 &  4.362 &                          0.000 &   0.000 &                  0 &      0 &                  0 &    0 &    0 &                  128.0 &     25 \\
+Seed      &   38942 &       4.003 &  4.663 &                          1.295 &   0.250 &                  1 &      1 &                  0 &    0 &    1 &                  125.0 &    178 \\
+Series A  &    6615 &       5.005 &  5.693 &                          7.906 &   4.400 &                  2 &      2 &                  0 &    0 &    2 &                  117.5 &    239 \\
+Series B  &    3342 &       5.918 &  7.608 &                         22.032 &  14.891 &                  2 &      3 &                  0 &    0 &    4 &                   87.0 &    255 \\
+Series C  &    1610 &       5.523 &  8.696 &                         45.881 &  35.285 &                  2 &      3 &                  0 &    1 &    9 &                   80.0 &    305 \\
+Series D+ &     998 &       5.005 &  9.696 &                         90.300 &  74.385 &                  3 &      5 &                  0 &    4 &   19 &                   69.0 &    319 \\
+Included  &  165422 &       4.003 &  4.688 &                          3.970 &   0.000 &                  1 &      1 &                  0 &    0 &    1 &                  145.0 &     90 \\
 \bottomrule
 \end{tabular}
